--- a/ShotCharts/templates/home.html
+++ b/ShotCharts/templates/home.html
@@ -17,9 +17,27 @@
             {% endfor %}
         </select>
         <select name="Season" id="season" method="GET" action="/">
-            {%  for season in seasons %}
-                <option value="{{ season }}" selected>{{ season }}</option>
-            {% endfor %}
+            <option value=1998-99>1998-1999</option>
+            <option value=1999-00>1999-2000</option>
+            <option value=2000-01>2000-2001</option>
+            <option value=2001-02>2001-2002</option>
+            <option value=2002-03>2002-2003</option>
+            <option value=2003-04>2003-2004</option>
+            <option value=2004-05>2004-2005</option>
+            <option value=2005-06>2005-2006</option>
+            <option value=2006-07>2006-2007</option>
+            <option value=2007-08>2007-2008</option>
+            <option value=2008-09>2008-2009</option>
+            <option value=2009-10>2009-2010</option>
+            <option value=2010-11>2010-2011</option>
+            <option value=2011-12>2011-2012</option>
+            <option value=2012-13>2012-2013</option>
+            <option value=2013-14>2013-2014</option>
+            <option value=2014-15>2014-2015</option>
+            <option value=2015-16>2015-2016</option>
+            <option value=2016-17>2016-2017</option>
+            <option value=2017-18>2017-2018</option>
+            <option value=2018-19>2018-2019</option>
         </select>
         <select name="ContextMeasure" id="context_measure" method="GET" action="/">
             {% for measure in params[0] %}
