--- a/ShotCharts/templates/404.html
+++ b/ShotCharts/templates/404.html
@@ -1,4 +1,4 @@
 {% block content %}
     <h1>This data was not found on the server. Please try again,</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p><a href="{{ url_for('home') }}">Back</a></p>
 {% endblock %}
