--- a/ShotCharts/templates/500.html
+++ b/ShotCharts/templates/500.html
@@ -1,5 +1,5 @@
 {% block content %}
     <h1>An unexpected internal server error has occurred</h1>
-    <p>Sorry about that! :)!</p>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p>Sorry about that! :)</p>
+    <p><a href="{{ url_for('home') }}">Back</a></p>
 {% endblock %}
