--- a/ShotCharts/templates/home.html
+++ b/ShotCharts/templates/home.html
@@ -38,6 +38,7 @@
             <option value=2016-17>2016-2017</option>
             <option value=2017-18>2017-2018</option>
             <option value=2018-19>2018-2019</option>
+            <option value=2019-20 selected>2019-2020</option>
         </select>
         <select name="ContextMeasure" id="context_measure" method="GET" action="/">
             {% for measure in params[0] %}
